<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="#EDE27B"
        android:text="@string/search"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="#5DE0F1"
        android:text="@string/my_search_history"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/imgPingMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/btnBookmark"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:backgroundTint="#4FC353"
        android:text="@string/my_bookmarks"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPingMain"
        android:layout_width="173dp"
        android:layout_height="139dp"
        android:contentDescription="@string/pinguin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pinguin" />
</androidx.constraintlayout.widget.ConstraintLayout>
